[GTK] Wrong variable used in RenderThemeGtk https://bugs.webkit.org/show_bug.cgi?id=186756

Patch by Tomas Popela <tpopela@redhat.com> on 2018-06-18
Reviewed by Carlos Garcia Campos.

Use SliderThumbHorizontalPart instead of SliderHorizontalPart.

* rendering/RenderThemeGtk.cpp:
(WebCore::RenderThemeGtk::adjustSliderThumbSize const):

Canonical link: https://commits.webkit.org/202031@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232928 268f45cc-cd09-0410-ab3c-d52691b4dbfc